# dsci524assign1

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: dsci524assign1.rst  modules.rst
dsci524assign1/: dsci524assign1.py
tests/: test_dsci524assign1.py
