[tool.poetry]
name = "dsci524assign1"
version = "0.1.0"
description = "Assignment 1 YES"
authors = ["Justin Fu <jufu11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
